modificaciones en estilo del frontEnd y en cuerpo del section

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,21 @@ header{
 
 section{
 	position: relative;
-	background: #F2F2F2;
-	width: 100%;
+	width: 1334px;
 	height: 625px;
+	background: background: rgba(252,234,187,1);
+background: -moz-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,234,187,1)), color-stop(0%, rgba(248,181,0,1)), color-stop(69%, rgba(252,205,77,1)), color-stop(100%, rgba(251,223,147,1)));
+background: -webkit-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+background: -o-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+background: -ms-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+background: linear-gradient(to bottom, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93', GradientType=0 );
+}
+
+.salBox {
+  overflow-x: auto; /* Hide horizontal scrollbar */
+  overflow-y: auto; /* Add vertical scrollbar */
 }
 
 #navDropdown1{
@@ -68,8 +80,15 @@ section{
 
 footer{
 	position: relative;
-	background: #D8D8D8;
+	background: background: rgba(242,246,248,1);
+background: -moz-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(242,246,248,1)), color-stop(1%, rgba(224,239,249,1)), color-stop(65%, rgba(216,225,231,1)), color-stop(100%, rgba(181,198,208,1)));
+background: -webkit-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
+background: -o-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
+background: -ms-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
+background: linear-gradient(to bottom, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#b5c6d0', GradientType=0 );;
 	width: 100%;
-	height: 300px;
+	height: 320px;
 }
 
