--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,21 @@
 }
 
 body{
-	position: relative;
+	position: absolute;
 }
+
 header{
 	position: relative;
 	width: 100%;
 	height: 70px;
+	background: rgba(252,234,187,1);
+	background: -moz-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,234,187,1)), color-stop(0%, rgba(248,181,0,1)), color-stop(69%, rgba(252,205,77,1)), color-stop(100%, rgba(251,223,147,1)));
+	background: -webkit-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+	background: -o-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+	background: -ms-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+	background: linear-gradient(to bottom, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93', GradientType=0 );
 }
 
 .row{
@@ -31,13 +40,13 @@ header{
 	left: 80px;
 }
 
-#bIngresar{
+#bRegis{
 	position: absolute;
 	top: 15px;
-	right: 100px;
+	right: 110px;
 }
 
-#bRegis{
+#bIngresar{
 	position: absolute;
 	top:15px;
 	right: 18px;
@@ -47,14 +56,7 @@ section{
 	position: relative;
 	width: 1334px;
 	height: 625px;
-	background: background: rgba(252,234,187,1);
-background: -moz-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,234,187,1)), color-stop(0%, rgba(248,181,0,1)), color-stop(69%, rgba(252,205,77,1)), color-stop(100%, rgba(251,223,147,1)));
-background: -webkit-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
-background: -o-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
-background: -ms-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
-background: linear-gradient(to bottom, rgba(252,234,187,1) 0%, rgba(248,181,0,1) 0%, rgba(252,205,77,1) 69%, rgba(251,223,147,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93', GradientType=0 );
+	background: #ebebeb;
 }
 
 .salBox {
@@ -67,9 +69,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', end
 
 }
 
-.dropdown{
+/*.dropdown{
 	margin: 5px 5px;
-}
+}*/
 
 .cajaSesion{
 	position: relative;
@@ -80,15 +82,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', end
 
 footer{
 	position: relative;
-	background: background: rgba(242,246,248,1);
-background: -moz-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(242,246,248,1)), color-stop(1%, rgba(224,239,249,1)), color-stop(65%, rgba(216,225,231,1)), color-stop(100%, rgba(181,198,208,1)));
-background: -webkit-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
-background: -o-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
-background: -ms-linear-gradient(top, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
-background: linear-gradient(to bottom, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 1%, rgba(216,225,231,1) 65%, rgba(181,198,208,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#b5c6d0', GradientType=0 );;
-	width: 100%;
-	height: 320px;
+	width: 1319px;
+	height: 70px;
+	bottom: 0;
 }
 
