--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,9 @@
 }
 
 body{
-	position: absolute;
 }
 
 header{
-	position: relative;
 	width: 100%;
 	height: 70px;
 	background: rgba(252,234,187,1);
@@ -23,6 +21,13 @@ header{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93', GradientType=0 );
 }
 
+#medio{
+	font-family: 'Lobster', cursive;
+	font-size: 25px;
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
 .row{
 	height: 100%;
 }
@@ -31,14 +36,13 @@ header{
 	position: absolute;
 	width: 100px;
 	top: 2px;
-	left: 0;
 }
 
 #logoGrande{
 	position: absolute;
-	margin: auto;
-	width: 250px;
-	left: 80px;
+	/*margin: auto;*/
+	width: 190px;
+	left: 120px;
 }
 
 #bRegis{
@@ -55,9 +59,8 @@ header{
 
 section{
 	position: relative;
-	width: 1334px;
 	height: 100%;
-	background: #ebebeb;
+	background: #F2F2F2;
 }
 
 .icon{
@@ -66,8 +69,8 @@ section{
 }
 
 .salBox {
-  overflow-x: auto; /* Hide horizontal scrollbar */
-  overflow-y: auto; /* Add vertical scrollbar */
+  /* overflow-x: auto; Hide horizontal scrollbar */
+  /*overflow-y: auto;  Add vertical scrollbar */
 }
 
 #navDropdown1{
@@ -88,7 +91,7 @@ section{
 
 footer{
 	position: relative;
-	width: 1319px;
+	width: 100%;
 	height: 70px;
 	bottom: 0px;
 }
